--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: cchaearthh
+application: web592group02
 version: 1
 runtime: php55
 api_version: 1
@@ -8,13 +8,13 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
- 
-- url: /(.*\.(js|css|html|gif|png|jpg|wav|mp3|json|atlas|map))$
+  
+- url: /(.*\.(js|css|html|gif|png|jpg))$
   static_files: \1
-  upload: .*\.(js|css|html|gif|png|jpg|wav|mp3|json|atlas|map)$
+  upload: .*\.(js|css|html|gif|png|jpg)$
  
 - url: /(.*\.php)$
   script: \1
-
-- url: /
+ 
+- url: .*
   script: main.php
